# wxTest2024

./: .gitignore  CMakeLists.txt  README.md  run-debug.cmd  run-release.cmd
src/: main.cpp
